			CHANGELOG for KAME kit

$KAME: CHANGELOG,v 1.1195 2000/08/14 07:08:53 itojun Exp $

<200008> 
Mon Aug 14 16:07:45 JST 2000  itojun@iijlab.net
	* netbsd/pkgsrc/security/openssl: update to 0.9.5a.
	* netbsd/pkgsrc/mail/postfix-current: postfix 20000531 + IPv6 patch.

Mon Aug 14 13:05:11 2000  SUMIKAWA Munechika  <sumikawa@ebina.hitachi.co.jp>
	* kame/freebsd3/ports/mozilla: upgrade to M17.

Sun Aug 13 11:09:44 JST 2000  itojun@iijlab.net
	* kame/rtsold/rtsold.c: add -a flag, to autoprobe interface.
	  suggested by thorpej@netbsd.org

Sun Aug 13 09:45:09 JST 2000  itojun@iijlab.net
	* kame/route6d: repair LP64 problem.  from thorpej@netbsd.org

2000-08-12  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/pim6sd: implemented an experimental (and KAME
	proprietary) hello option "additional addresses".
	* kame/kame/pim6sd/route.c (set_incoming): when upstream router
	determination, consider neighbor's additional addresses got
	through the new option. This solves a case of mismatch between RP
	and PIM neighbor.

2000-08-12  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/pim6sd/main.c (cleanup): upon receipt of SIGTERM,
	inform all neighbors the termination by sending a hello message
	with 0 holdtime.

2000-08-12  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd3/usr.bin/netstat/if.c (intpr): supported IPv6 scoped
	addresses format.

2000-08-12  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* kame/kame/pim6sd/pim6_proto.c (receive_pim6_bootstrap): added a
	pair of braces to avoid unintentional failure.
	In response to the PR kit/279 from Daniel Elphick
	<de@ecs.soton.ac.uk>

2000-08-11  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd3/ports/bind9/: upgraded to 9.0.0rc2.

2000-08-11  JINMEI, Tatuya  <jinmei@isl.rdc.toshiba.co.jp>
	* freebsd4/include/.prepare: was added to ignore ifaddrs.h
	conflict between the FreeBSD's original version and the KAME's
	shared version.
	In response to a report from Tetsuya Isaki