@@ -121,7 +121,7 @@ int	setaddr;
 int	setipdst;
 int	doalias;
 int	clearaddr;
-int	newaddr = 1;
+int	newaddr = 0;
 #ifdef INET6
 static int ip6lifetime;
 #endif
@@ -671,6 +671,7 @@ setifaddr(addr, param, s, afp)
 	 * and the flags may change when the address is set.
 	 */
 	setaddr++;
+	newaddr = 1;
 	if (doalias == 0)
 		clearaddr = 1;
 	(*afp->af_getaddr)(addr, (doalias >= 0 ? ADDR : RIDADDR));
@@ -1324,8 +1325,6 @@ in6_getaddr(s, which)
 	struct addrinfo hints, *res;
 	int error;
 
-	newaddr &= 1;
-
 	memset(&hints, 0, sizeof(hints));
 	hints.ai_family = AF_INET6;
 	hints.ai_socktype = SOCK_DGRAM;
@@ -1348,8 +1347,6 @@ in6_getaddr(s, which)
 	}
 #else
 	register struct sockaddr_in6 *sin = sin6tab[which];
-
-	newaddr &= 1;
 
 	sin->sin6_len = sizeof(*sin);
 	if (which != MASK)
